--- a/app/views/municipes/_form.html.erb
+++ b/app/views/municipes/_form.html.erb
@@ -5,7 +5,8 @@
   <%= f.input :email %>
   <%= f.input :birth_date, as: :date, html5: true %>
   <%= f.input :phone %>
-  <%= f.input :photo %>
+  <%= image_tag "#{@municipe.photo_url(:thumb)}" %>
+  <%= f.file_field :photo %>
   <%= f.input :status, collection: ['active', 'inactive'], selected: 'active'  %>
   <%= f.button :submit %>
 <% end %>
