--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,81 @@
  *= require_tree .
  *= require_self
  */
+
+ :root {
+
+  /* Colors */
+  --body-color:#f8f9fd;
+  --text-color: #0A0708;
+  --title-color: #444444;
+  --emphasis-color: #973030;
+  --contrast-color: #309781;
+  --light-color: white;
+  --dark-color: #212529;
+
+  /* Typeface */
+  --default-font: "Montserrat", sans-serif;
+
+  /* Font Size */
+  --biggest: 3rem;
+  --h1: 2.25rem;
+  --h2: 1.5rem;
+  --h3: 1.25rem;
+  --text: 1rem;
+  --small: .875rem;
+  --smallest: .813rem;
+
+  /* Font Weight */
+  --light: 300;
+  --medium: 400;
+  --bold: 700;
+
+ }
+
+ /* BASE */
+
+ body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: var(--body-color);
+ }
+
+ html {
+  scroll-behavior: smooth;
+}
+
+body,
+button,
+input,
+textarea {
+  font-size: var(--text);
+  font-family: var(--default-font);
+}
+
+h1,
+h2,
+h3 {
+  font-weight: var(--bold);
+  color: var(--title-color);
+}
+
+h1 {
+  font-size: var(--h1);
+}
+
+h2 {
+  font-size: var(--h2);
+}
+
+h3 {
+  font-size: var(--h3);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
