--- a/app/assets/stylesheets/municipes.scss
+++ b/app/assets/stylesheets/municipes.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the Municipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.container {
+  max-width: 1920px;
+  min-width: 1024;
+  padding: 3rem;
+  margin: auto;
+}
+
+.btn-back {
+  margin-top: 1.5rem;
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  font-weight: var(--bold);
+  display: inline-block;
+  padding: .85rem 2rem;
+}
+
+.btn-add {
+  background-color: var(--contrast-color);
+  color: var(--light-color);
+  font-weight: var(--bold);
+  display: flex;
+  padding: .85rem 2rem;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
