--- a/app/views/municipes/index.html.erb
+++ b/app/views/municipes/index.html.erb
@@ -1,35 +1,37 @@
-<h1>Municipes</h1>
-
-<%= link_to 'New Municipe', new_municipe_path %>
+<div class="header">
+  <h1>Municipes</h1>
+  <%= link_to '+ Add Municipe', new_municipe_path, class: 'btn-add' %>
+</div>
 
 <div>
   <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>CPF</th>
-      <th>CNS</th>
-      <th>Email</th>
-      <th>Birthdate</th>
-      <th>Phone</th>
-      <th>Status</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @municipes.each do |municipe| %>
+    <thead>
       <tr>
-        <td><%= municipe.name %></td>
-        <td><%= municipe.cpf %></td>
-        <td><%= municipe.cns %></td>
-        <td><%= municipe.email %></td>
-        <td><%= municipe.birth_date.strftime('%d/%m/%Y') %></td>
-        <td><%= municipe.phone %></td>
-        <td><%= municipe.status %></td>
-        <td><%= link_to "🖉", edit_municipe_path(municipe.id) %></td>
+        <th>Name</th>
+        <th>CPF</th>
+        <th>CNS</th>
+        <th>Email</th>
+        <th>Birthdate</th>
+        <th>Phone</th>
+        <th>Status</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @municipes.each do |municipe| %>
+        <tr>
+          <td><%= municipe.name %></td>
+          <td><%= municipe.cpf %></td>
+          <td><%= municipe.cns %></td>
+          <td><%= municipe.email %></td>
+          <td><%= municipe.birth_date.strftime('%d/%m/%Y') %></td>
+          <td><%= "+#{municipe.phone[0..1]} #{municipe.phone[2..3]} #{municipe.phone[4..14]}" %></td>
+          <td><%= municipe.status %></td>
+          <td><%= link_to "🖉", edit_municipe_path(municipe.id) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
 </div>
