--- a/app/views/municipes/index.html.erb
+++ b/app/views/municipes/index.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <div class="header">
   <h1>Municipes</h1>
   <%= link_to '+ Add Municipe', new_municipe_path, class: 'btn-add' %>
