--- a/app/views/municipes/index.html.erb
+++ b/app/views/municipes/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="header">
   <h1>Municipes</h1>
+  <%= render 'search' %>
   <%= link_to '+ Add Municipe', new_municipe_path, class: 'btn-add' %>
 </div>
 
