--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,38 +1,41 @@
-input {
-  width: 15rem;
-  display: inline;
-  padding: .85rem;
-  border: none;
+.municipe-form {
 
-}
+  input {
+    width: 15rem;
+    display: inline;
+    padding: .85rem;
+    border: none;
 
-input.btn {
-  margin-top: 1.5rem;
-  background-color: var(--dark-color);
-  color: var(--light-color);
-  font-weight: var(--bold);
-}
+  }
 
-label {
-  width: 8rem;
-  display: inline-block;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  font-weight: var(--bold);
-}
+  input.btn {
+    margin-top: 1.5rem;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    font-weight: var(--bold);
+  }
 
-select {
-  padding: .85rem;
-  border: none;
-}
+  label {
+    width: 8rem;
+    display: inline-block;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    font-weight: var(--bold);
+  }
 
-abbr {
-  color: var(--emphasis-color);
-  font-weight: var(--bold);
-}
+  select {
+    padding: .85rem;
+    border: none;
+  }
 
-span.error {
-  font-size: var(--small);
-  color: var(--emphasis-color);
-  margin-left: 1rem;
+  abbr {
+    color: var(--emphasis-color);
+    font-weight: var(--bold);
+  }
+
+  span.error {
+    font-size: var(--small);
+    color: var(--emphasis-color);
+    margin-left: 1rem;
+  }
 }
